syntax = "proto3";

package horoscope;

import "horoscope_models.proto";

option go_package = "github.com/nthnluu/aether/examples/horoscope/pb";

service HoroscopeService {
  // Gets the daily horoscope for the given zodiac sign.
  rpc GetDailyHoroscope(GetDailyHoroscopeRequest) returns (GetDailyHoroscopeResponse);

  // Gets the horoscope for the given zodiac sign and date.
  rpc GetHoroscope(GetHoroscopeRequest) returns (GetHoroscopeResponse);

  // Suggest a fortune.
  rpc SuggestFortune(SuggestFortuneRequest) returns (SuggestFortuneResponse);
}

message GetDailyHoroscopeRequest {
   ZodiacSign zodiac_sign = 1;
}

message GetDailyHoroscopeResponse {
  Fortune fortune = 1;
}

message GetHoroscopeRequest {
  ZodiacSign zodiac_sign = 1;
  uint32 date = 2;
}

message GetHoroscopeResponse {
  Fortune fortune = 1;
}

message SuggestFortuneRequest {
    ZodiacSign zodiac_sign = 1;
    string suggestion = 2;
}

message SuggestFortuneResponse {
    bool success = 1;
}