syntax = "proto3";

package golink;

import "options.proto";

option go_package = "github.com/nthnluu/aether/pb";

service GoLinkService {
  // Look up a go link using its slug.
  rpc Lookup(LookupRequest) returns (LookupResponse) {
    option (options.deadline) = 30.0; // in seconds
    option (options.http_get) = "/link/{slug}";
  };

  // Create a new go link using the provided slug and destination URL.
  rpc CreateLink(CreateLinkRequest) returns (CreateLinkResponse) {
    option (options.deadline) = 30.0;
    option (options.http_post) = "/link";
  };
}

message LookupRequest {
  string slug = 1 [(options.required) = true, deprecated = true];
  bool hey = 2;
}

message LookupResponse {
  string destination_url = 1;
}

message CreateLinkRequest {
  string slug = 1;
  string destination_url = 2;
}

message CreateLinkResponse {
  string url = 1;
}
